@@ -202,7 +202,7 @@ class tx_feuserregister_model_Success extends tx_feuserregister_model_AbstractSt
 	
 	protected function _getGlobalMarker() {
 		$marker = array(
-			'###FORM_URL###'			=> htmlspecialchars(t3lib_div::linkThisScript()),
+			'###FORM_URL###' 		=> $this->_controller->cObj->typoLink_URL(array('parameter' => $GLOBALS['TSFE']->id)),	
 			'###HIDDEN_FIELDS###'		=> $this->_getHiddenFields()
 		);
 		return $marker;
